Endpoint for the highest normalized range for a specific day